gisservice_Mine/Deployments/gisquery-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: gisqueryservice-srv
spec:
  type: NodePort
  selector:
    app: gisqueryservice
  ports:
    - name: gisqueryservice
      protocol: TCP
      port: 80
      targetPort: 80
