gisservice_Mine/Deployments/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: gisservice.com
      http:
        paths:
          - path: /api/GisTrans
            pathType: Prefix
            backend:
              service:
                name: gisquery-clusterip-srv
                port:
                  number: 80
          - path: /api/GisTransAddr
            pathType: Prefix
            backend:
              service:
                name: gisquery-clusterip-srv
                port:
                  number: 80
